testdata/parser/negative/4.txt
Parse error at 4.pdl:8:7: Illegal built-in occurrence
		y = get(a); // illegal
		    ^
